--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,8 @@ animate();
 
         name: "بوزياني إيمان",
     greeting: "", // will be dynamically filled by JS
-    title: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مربية",
+  title: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة",
+
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | واتساب: 0673945830 | وهران، الجزائر |",
         // Navigation
         education: "التعليم",
@@ -1243,6 +1244,7 @@ animate();
   </script>
 </body>
 </html>
+
 
 
 
