--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@ function switchLanguage(lang) {
     }
   });
 
-  // Update placeholders
+  // Update placeholders for inputs and textareas
   document.querySelectorAll('input[data-key], textarea[data-key]').forEach(element => {
     const key = element.getAttribute('data-key');
     if (translations[lang][key]) {
@@ -1201,42 +1201,44 @@ function switchLanguage(lang) {
     }
   });
 
-  // Update direction and alignment
+  // Update text direction and alignment
   if (lang === 'ar') {
     document.body.setAttribute('dir', 'rtl');
     document.body.style.textAlign = 'right';
-    const nav = document.querySelector('.nav-container');
-    if(nav) nav.style.justifyContent = 'flex-end';
+    document.querySelector('.nav-container').style.justifyContent = 'flex-end';
   } else {
     document.body.setAttribute('dir', 'ltr');
     document.body.style.textAlign = 'left';
-    const nav = document.querySelector('.nav-container');
-    if(nav) nav.style.justifyContent = 'center';
+    document.querySelector('.nav-container').style.justifyContent = 'center';
   }
 
-  // Update HTML lang attribute
-  document.documentElement.setAttribute('lang', lang);
+  // Dynamic greeting based on time
+  const hour = new Date().getHours();
+  let greetingText = '';
+  if (hour < 12) greetingText = lang === 'ar' ? 'صباح الخير !' : 'Good Morning !';
+  else if (hour < 18) greetingText = lang === 'ar' ? 'مساء الخير !' : 'Good Afternoon !';
+  else greetingText = lang === 'ar' ? 'مساء الخير !' : 'Good Evening !';
+  const greetingElement = document.querySelector('[data-key="greeting"]');
+  if (greetingElement) greetingElement.textContent = greetingText;
 
-  // Typing effect for your title
+  // Optional: Restart typing effect for title
   const typingElement = document.getElementById('typing');
   if (typingElement) {
-    const title = translations[lang]['title'] || '';
-    typingElement.textContent = ''; // clear old text
+    const title = translations[lang]['title'];
+    typingElement.textContent = '';
     let i = 0;
-
-    // Clear previous timeout if switching quickly
-    if (typingTimeout) clearTimeout(typingTimeout);
-
     function typing() {
       if (i < title.length) {
         typingElement.innerHTML += title.charAt(i);
         i++;
-        typingTimeout = setTimeout(typing, 80); // adjust speed here
+        setTimeout(typing, 80);
       }
     }
-
-    typing(); // start typing
+    typing();
   }
+
+  // Update HTML lang attribute
+  document.documentElement.setAttribute('lang', lang);
 }
 
   // Update HTML lang attribute
@@ -1248,6 +1250,7 @@ function switchLanguage(lang) {
   </script>
 </body>
 </html>
+
 
 
 
