--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
-
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -499,19 +498,18 @@ body[dir="ltr"] .nav-container {
     body.dark-mode #moreBtn:hover {
       background: #a6c1ee;
     }
- body[dir="ltr"] p,
-    body[dir="ltr"] ul,
-    body[dir="ltr"] .contact-info,
-    body[dir="ltr"] section {
-      text-align: left;
-    }
+/* Header content alignment */
+.header-content {
+  max-width: 900px;      /* optional, keeps content from stretching too far */
+  margin: 0 auto;        /* center horizontally for LTR */
+  text-align: center;    /* center text by default */
+}
 
-    body[dir="rtl"] p,
-    body[dir="rtl"] ul,
-    body[dir="rtl"] .contact-info,
-    body[dir="rtl"] section {
-      text-align: right;
-    }
+/* When page is RTL (Arabic) */
+body[dir="rtl"] .header-content {
+  text-align: right;     /* align everything to the right */
+}
+
   </style>
 </head>
 <body>
@@ -526,12 +524,13 @@ body[dir="ltr"] .nav-container {
   </div>
 
   <header>
+  <div class="header-content">
     <h1>Bouziani Imane</h1>
-    <p id="greeting"></p> <!-- Dynamic greeting will show here -->
-    <p id="typing"></p>
-
+    <p id="greeting"></p> <!-- Dynamic greeting -->
+    <p id="typing"></p>   <!-- Typing effect -->
     <p>| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
-  </header>
+  </div>
+</header>
 
   <button id="darkBtn"><i class="fa-solid fa-moon"></i> Dark Mode</button>
 
@@ -1217,6 +1216,8 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
+
 
 
 
