--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ animate();
         // Navigation
         name: "Bouziani Imane",
     greeting: "", // will be dynamically filled by JS
-    title: "AI Engineer │ Computer Scientist │ Innovator │ Educator",
+    title: "",
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |",
         education: "Education",
         experience: "Experience",
@@ -1225,6 +1225,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
