--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
       transition: background 0.5s;
       font-family: 'Quicksand', sans-serif;
     }
-    
+    ul li::before {
+  content: "●";
+  color: #a6c1ee;
+  margin-right: 8px;
+}
     .nav-main {
       display: flex;
       gap: 20px;
@@ -1225,6 +1229,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
