--- a/index.html
+++ b/index.html
@@ -519,33 +519,33 @@ body[dir="rtl"] .header-content {
   align-items: center;
   justify-content: center;
   text-align: center;
-  min-height: 80vh;
-  padding: 2rem;
+  min-height: 50vh; /* smaller height */
+  padding: 1.5rem;  /* less padding */
   background: linear-gradient(135deg, #f9f9f9, #f3f3ff);
 }
 
 .hero-content {
-  max-width: 800px;
+  max-width: 600px; /* narrower container */
 }
 
 .hero h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;  /* smaller heading */
   color: #333;
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
 }
 
 .hero p {
-  font-size: 1.2rem;
+  font-size: 1rem;   /* smaller text */
   color: #555;
-  line-height: 1.6;
-  margin-bottom: 1.2rem;
+  line-height: 1.5;  /* tighter spacing */
+  margin-bottom: 1rem;
 }
 
 .hero .btn {
   display: inline-block;
   background: #6c63ff;
   color: white;
-  padding: 12px 24px;
+  padding: 10px 20px; /* smaller button */
   border-radius: 8px;
   text-decoration: none;
   font-weight: bold;
@@ -1289,6 +1289,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
