--- a/index.html
+++ b/index.html
@@ -575,6 +575,8 @@ body[dir="rtl"] .header-content {
     <p id="greeting" data-key="greeting"></p> <!-- Dynamic greeting -->
     <p id="typing" data-key="title"></p>      <!-- Typing effect -->
     <p data-key="contactInfo">| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
+    <p data-key="headline">مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة</p>
+
   </div>
 </header>
 
@@ -1062,6 +1064,7 @@ animate();
     greeting: "", // will be dynamically filled by JS
     title: "",
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |",
+         headline: "AI Engineer │ Computer Scientist │ Innovator │ Teacher",
         education: "Education",
         experience: "Experience",
         skills: "Skills",
@@ -1153,8 +1156,9 @@ animate();
         // Navigation
         name: "بوزياني إيمان",
     greeting: "", // will be dynamically filled by JS
-title: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة",
+
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | واتساب: 0673945830 | وهران، الجزائر |",
+            headline: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة",
         education: "التعليم",
         experience: "الخبرة",
         skills: "المهارات",
@@ -1289,6 +1293,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
