--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@ body[dir="rtl"] .header-content {
   <div class="header-content">
     <h1 data-key="name">Bouziani Imane</h1>
     <p id="greeting" data-key="greeting"></p> <!-- Dynamic greeting -->
-    <p id="typing" data-key="title"></p>      <!-- Typing effect -->
+    <p id="typing" data-key="title"> مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة</p>      <!-- Typing effect -->
     <p data-key="contactInfo">| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
-    <p data-key="headline">مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة</p>
+
 
   </div>
 </header>
@@ -1064,7 +1064,7 @@ animate();
     greeting: "", // will be dynamically filled by JS
     title: "",
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |",
-         headline: "AI Engineer │ Computer Scientist │ Innovator │ Teacher",
+         title: "AI Engineer │ Computer Scientist │ Innovator │ Teacher",
         education: "Education",
         experience: "Experience",
         skills: "Skills",
@@ -1158,7 +1158,7 @@ animate();
     greeting: "", // will be dynamically filled by JS
 
     contactInfo: "| bouzianiimane1@gmail.com | +213 664 64 77 79 | واتساب: 0673945830 | وهران، الجزائر |",
-            headline: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة",
+            title: "مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة",
         education: "التعليم",
         experience: "الخبرة",
         skills: "المهارات",
@@ -1293,6 +1293,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
