--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ body[dir="rtl"] .header-content {
   <div class="header-content">
     <h1 data-key="name">Bouziani Imane</h1>
     <p id="greeting" data-key="greeting"></p> <!-- Dynamic greeting -->
-    <p id="typing" data-key="title"> مهندسة ذكاء اصطناعي │ عالمة حاسوب │ مبتكرة │ مُدَرسة</p>      <!-- Typing effect -->
+    <p id="typing" data-key="title"></p>      <!-- Typing effect -->
     <p data-key="contactInfo">| bouzianiimane1@gmail.com | +213 664 64 77 79 | WhatsApp: 0673945830 | Oran, Algeria |</p>
 
 
@@ -1293,6 +1293,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
