--- a/index.html
+++ b/index.html
@@ -630,6 +630,12 @@ body[dir="rtl"] .header-content {
   </div>
 </section>
   <section id="education" data-aos="fade-up">
+    <p data-key="aboutMe">
+  I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.
+
+  With a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects.
+</p>
+
     <h2><i class="fa-solid fa-graduation-cap"></i> <span class="section-title" data-key="education">Education</span></h2>
     <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
     <ul>
@@ -1083,7 +1089,7 @@ animate();
         qualitiesTitle: "Professional Qualities",
         cvTitle: "My CV",
         contactTitle: "Contact Me",
-        
+         aboutMe: "I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.\n\nWith a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects."
         // Education section
         education1: "Master in Artificial Intelligence – With Distinction -2025",
         education2: "Bachelor in Computer Science – Information Systems -2023",
@@ -1177,7 +1183,8 @@ animate();
         qualitiesTitle: "الصفات المهنية",
         cvTitle: "سيرتي الذاتية",
         contactTitle: "اتصل بي",
-        
+        aboutMe: "أنا مهندسة ذكاء اصطناعي وعالمة حاسوب شغوفة ببناء أنظمة ذكية تجمع بين التعلم العميق، والتحسين، والحلول الإبداعية. مهمتي هي جعل الذكاء الاصطناعي المتطور أكثر سهولة وواقعية وذا أثر فعّال في التطبيقات العملية.\n\nبفضل خبرة قوية في البحث والتطوير، أتخصص في التعلم الآلي، ورؤية الحاسوب، والأطر الهجينة للذكاء الاصطناعي. أزدهر في حل المشكلات المعقدة والتعاون في المشاريع المبتكرة."
+  }
         // Education section
         education1: "ماجستير في الذكاء الاصطناعي – بتقدير امتياز -2025  ",
         education2: "بكالوريوس في علوم الحاسوب – نظم المعلومات -2023  ",
@@ -1293,6 +1300,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
