--- a/index.html
+++ b/index.html
@@ -630,19 +630,14 @@ body[dir="rtl"] .header-content {
   </div>
 </section>
   <section id="education" data-aos="fade-up">
-    <p data-key="aboutMe">
-  I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.
-
-  With a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects.
-</p>
-
+   
     <h2><i class="fa-solid fa-graduation-cap"></i> <span class="section-title" data-key="education">Education</span></h2>
     <div class="illustration"><img src="images/college project-bro.svg" alt="Education"></div>
     <ul>
-      <li data-key="education1">● Master in Artificial Intelligence – With Distinction -2025</li>
-      <li data-key="education2">● Bachelor in Computer Science – Information Systems -2023</li>
-      <li data-key="education3">● Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
-      <li data-key="education4">● STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
+      <li data-key="education1"> Master in Artificial Intelligence – With Distinction -2025</li>
+      <li data-key="education2"> Bachelor in Computer Science – Information Systems -2023</li>
+      <li data-key="education3"> Startup Label Certificate – AI Project on the Development of a Mobile and Web Application for Intelligent and Smart Vehicles -2023</li>
+      <li data-key="education4"> STEAM Certification – Designing Creative Educational Programs for Learners-2023</li>
     </ul>
   </section>
 
@@ -650,13 +645,13 @@ body[dir="rtl"] .header-content {
     <h2><i class="fa-solid fa-briefcase"></i> <span class="section-title" data-key="experience">Professional Experience</span></h2>
     <div class="illustration"><img src="images/Pair programming-bro.svg" alt="Work"></div>
     <ul>
-      <li data-key="experience1">● IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
-      <li data-key="experience2">● IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
-      <li data-key="experience3">● Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
-      <li data-key="experience4">● STEAM & Programming Lecturer – University (2022 – 2023)</li>
-      <li data-key="experience5">● Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
-      <li data-key="experience6">● Medical equipment operator specialized in neurology for 03 years</li>
-      <li data-key="experience7">● Pharmacy Assistant and Operations Manager</li>
+      <li data-key="experience1"> IT Specialist – ZHONGMA International Construction (2023 – 2025)</li>
+      <li data-key="experience2"> IT Specialist – Private Neurology Clinic (2024 – 2025)</li>
+      <li data-key="experience3"> Internship in Medical Imaging – Private Radiology Clinic (2025)</li>
+      <li data-key="experience4"> STEAM & Programming Lecturer – University (2022 – 2023)</li>
+      <li data-key="experience5"> Founder & President – Auto Tech Scientific Club (2022 – 2024)</li>
+      <li data-key="experience6"> Medical equipment operator specialized in neurology for 03 years</li>
+      <li data-key="experience7"> Pharmacy Assistant and Operations Manager</li>
     </ul>
   </section>
 
@@ -664,11 +659,11 @@ body[dir="rtl"] .header-content {
     <h2><i class="fa-solid fa-laptop-code"></i> <span class="section-title" data-key="skills">Technical Skills</span></h2>
     <div class="illustration"><img src="images/Data extraction-amico.svg" alt="Skills"></div>
     <ul>
-      <li data-key="skills1">● Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
-      <li data-key="skills2">● AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
-      <li data-key="skills3">● Databases: MySQL, Oracle, SQL Server</li>
-      <li data-key="skills4">● 3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
-      <li data-key="skills5">● Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
+      <li data-key="skills1"> Languages: Python, Java, C/C++, Dart, Swift, R, MATLAB, SQL, HTML, CSS, JavaScript</li>
+      <li data-key="skills2">AI & Data Science: TensorFlow, PyTorch, Keras, Scikit-Learn, OpenCV...</li>
+      <li data-key="skills3"> Databases: MySQL, Oracle, SQL Server</li>
+      <li data-key="skills4"> 3D Tools & Simulation: Unity, Unreal Engine, Blender, MATLAB Simulink</li>
+      <li data-key="skills5"> Systems & Networks: Windows, Linux, Wireshark, Cybersecurity</li>
     </ul>
     <!-- Progress bars -->
     <div class="skill-bar">
@@ -685,9 +680,9 @@ body[dir="rtl"] .header-content {
     <h2><i class="fa-solid fa-language"></i> <span class="section-title" data-key="languages">Languages</span></h2>
     <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
     <ul>
-      <li data-key="language1">● Arabic: Native</li>
-      <li data-key="language2">● English: Advanced</li>
-      <li data-key="language3">● French: Professional</li>
+      <li data-key="language1"> Arabic: Native</li>
+      <li data-key="language2"> English: Advanced</li>
+      <li data-key="language3"> French: Professional</li>
     </ul>
   </section>
 
@@ -700,11 +695,11 @@ body[dir="rtl"] .header-content {
     </div>
 
     <ul>
-      <li data-key="activity1">● Participation in international hackathons (AI, Robotics, Data Science)</li>
-      <li data-key="activity2">● Organization of AI & Programming workshops for different proficiency levels</li>
-      <li data-key="activity3">● Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
-      <li data-key="activity4">● Design of AI-powered diagnostic systems using medical imaging</li>
-      <li data-key="activity5">● Development of professional websites, web pages, and inventory management softwares</li>
+      <li data-key="activity1"> Participation in international hackathons (AI, Robotics, Data Science)</li>
+      <li data-key="activity2"> Organization of AI & Programming workshops for different proficiency levels</li>
+      <li data-key="activity3"> Development and creation of educational 3D games using Unreal Engine and Unity 3D</li>
+      <li data-key="activity4"> Design of AI-powered diagnostic systems using medical imaging</li>
+      <li data-key="activity5"> Development of professional websites, web pages, and inventory management softwares</li>
     </ul>
   </section>
 
@@ -1300,6 +1295,7 @@ document.documentElement.lang = "en";
   </script>
 </body>
 </html>
+
 
 
 
