--- a/index.html
+++ b/index.html
@@ -612,23 +612,15 @@ body[dir="rtl"] .header-content {
     </div>
   </div>
 <!-- Hero / About Me Section -->
-<section id="about" class="hero">
-  <div class="hero-content">
-    
-    <p>
-      I’m an <strong>AI Engineer and Computer Scientist</strong> passionate about 
-      building intelligent systems that combine deep learning, optimization, and 
-      creative solutions. My mission is to make cutting-edge AI more 
-      <em>accessible, practical, and impactful</em> in real-world applications.
-    </p>
-    <p>
-      With a strong background in research and development, I specialize in 
-      <strong>machine learning, computer vision, and hybrid AI frameworks</strong>. 
-      I thrive on solving complex problems and collaborating on innovative projects.
-    </p>
-  
-  </div>
+<section id="about" class="about">
+  <h2 data-key="aboutTitle">About Me</h2>
+  <p data-key="aboutMe">
+    I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.
+
+    With a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects.
+  </p>
 </section>
+
   <section id="education" data-aos="fade-up">
    
     <h2><i class="fa-solid fa-graduation-cap"></i> <span class="section-title" data-key="education">Education</span></h2>
@@ -1057,7 +1049,8 @@ animate();
       contactTitle: "Contact Me",
 
       // About Me
-      aboutMe: "I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.\n\nWith a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects.",
+       aboutTitle: "About Me",
+    aboutMe: "I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.\n\nWith a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects."
 
       // Education section
       education1: "Master in Artificial Intelligence – With Distinction -2025",
@@ -1156,8 +1149,8 @@ animate();
       contactTitle: "اتصل بي",
 
       // About Me
-      aboutMe: "أنا مهندسة ذكاء اصطناعي وعالمة حاسوب شغوفة ببناء أنظمة ذكية تجمع بين التعلم العميق، والتحسين، والحلول الإبداعية. مهمتي هي جعل الذكاء الاصطناعي المتطور أكثر سهولة وواقعية وذا أثر فعّال في التطبيقات العملية.\n\nبفضل خبرة قوية في البحث والتطوير، أتخصص في التعلم الآلي، ورؤية الحاسوب، والأطر الهجينة للذكاء الاصطناعي. أزدهر في حل المشكلات المعقدة والتعاون في المشاريع المبتكرة.",
-
+         aboutTitle: "نبذة عني",
+    aboutMe: "أنا مهندسة ذكاء اصطناعي وعالمة حاسوب شغوفة ببناء أنظمة ذكية تجمع بين التعلم العميق، والتحسين، والحلول الإبداعية. مهمتي هي جعل الذكاء الاصطناعي المتطور أكثر سهولة وواقعية وذا أثر فعّال في التطبيقات العملية.\n\nبفضل خبرة قوية في البحث والتطوير، أتخصص في التعلم الآلي، ورؤية الحاسوب، والأطر الهجينة للذكاء الاصطناعي. أزدهر في حل المشكلات المعقدة والتعاون في المشاريع المبتكرة."
       // Education section
       education1: "ماجستير في الذكاء الاصطناعي – بتقدير امتياز -2025",
       education2: "بكالوريوس في علوم الحاسوب – نظم المعلومات -2023",
@@ -1266,3 +1259,4 @@ animate();
 
 </body>
 </html>
+
