--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ animate();
 
       // About Me
        aboutTitle: "About Me",
-    aboutMe: "I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.\n\nWith a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects."
+    aboutMe: "I’m an AI Engineer and Computer Scientist passionate about building intelligent systems that combine deep learning, optimization, and creative solutions. My mission is to make cutting-edge AI more accessible, practical, and impactful in real-world applications.\n\nWith a strong background in research and development, I specialize in machine learning, computer vision, and hybrid AI frameworks. I thrive on solving complex problems and collaborating on innovative projects.",
 
       // Education section
       education1: "Master in Artificial Intelligence – With Distinction -2025",
@@ -1259,4 +1259,5 @@ animate();
 
 </body>
 </html>
+
 
