--- a/index.html
+++ b/index.html
@@ -723,12 +723,12 @@ body[dir="rtl"] .header-content {
 
     <!-- Added contact information block (keeps everything else intact) -->
     <div class="contact-info">
-      <p><i class="fa-solid fa-envelope"></i><strong data-key="emailLabel">● Email:</strong> <a href="mailto:bouzianiimane1@gmail.com">bouzianiimane1@gmail.com</a></p>
-      <p><i class="fa-solid fa-phone"></i><strong data-key="phoneLabel">● Phone:</strong> +213 664 64 77 79</p>
-      <p><i class="fa-brands fa-whatsapp"></i><strong data-key="whatsappLabel">● WhatsApp:</strong> 0673945830</p>
-      <p><i class="fa-solid fa-location-dot"></i><strong data-key="locationLabel">● Location:</strong> Oran, Algeria</p>
-      <p><i class="fa-brands fa-linkedin"></i><strong data-key="linkedinLabel">● LinkedIn:</strong> <a href="https://linkedin.com/in/bouzianiimane" target="_blank">linkedin.com/in/bouzianiimane</a></p>
-      <p><i class="fa-brands fa-github"></i><strong data-key="githubLabel">● GitHub:</strong> <a href="https://github.com/bouzianiimane" target="_blank">github.com/bouzianiimane</a></p>
+      <p><i class="fa-solid fa-envelope"></i><strong data-key="emailLabel"> Email:</strong> <a href="mailto:bouzianiimane1@gmail.com">bouzianiimane1@gmail.com</a></p>
+      <p><i class="fa-solid fa-phone"></i><strong data-key="phoneLabel"> Phone:</strong> +213 664 64 77 79</p>
+      <p><i class="fa-brands fa-whatsapp"></i><strong data-key="whatsappLabel"> WhatsApp:</strong> 0673945830</p>
+      <p><i class="fa-solid fa-location-dot"></i><strong data-key="locationLabel"> Location:</strong> Oran, Algeria</p>
+      <p><i class="fa-brands fa-linkedin"></i><strong data-key="linkedinLabel"> LinkedIn:</strong> <a href="https://linkedin.com/in/bouzianiimane" target="_blank">linkedin.com/in/bouzianiimane</a></p>
+      <p><i class="fa-brands fa-github"></i><strong data-key="githubLabel"> GitHub:</strong> <a href="https://github.com/bouzianiimane" target="_blank">github.com/bouzianiimane</a></p>
     </div>
 
     <div class="illustration"><img src="Contact us-bro.svg" alt="Contact"></div>
@@ -1259,5 +1259,6 @@ animate();
 
 </body>
 </html>
+
 
 
